--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@reduxjs/toolkit": "^2.2.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
