--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.13",
+    "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.15.13",
     "@reduxjs/toolkit": "^2.2.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3"
   },
